# entcosy

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/: ecs.lua  entcosy.lua  genie.lua  tests.lua  toolchain.lua
src/: entity.hpp  event.hpp  event_subscriber.hpp  main.cpp  registry.hpp  system.hpp  view.hpp
src/core/: base_component_container.hpp  base_event_subscriber.hpp  component_container.hpp  entity_component_iterator.hpp  type_registry.hpp
src/entcosy/: config.hpp  entity.hpp  event_subscriber.hpp  registry.hpp  system.hpp  ui_system.hpp
src/entcosy/core/: base_event_subscriber.hpp  base_ui_system.hpp  component_container.hpp  entity_component_iterator.hpp  type_registry.hpp
src/entcosy/events/: on_component_assigned.hpp  on_component_removed.hpp  on_entity_created.hpp  on_entity_destroyed.hpp
src/entcosy/tags/: ui_comp_tag.hpp
src/example/: main.cpp
